<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    package="com.budgy">

    <Button
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:text="@string/loan_credit"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/expense_name"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/expense_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel"/>

    <EditText
        android:id="@+id/expense_amount"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_name" />

    <Button
        android:id="@+id/add_expense_button"
        style="@style/NextButton"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_amount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expense_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/add_expense_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/total_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TOTAL: 0 KR"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_list"/>


    <TextView
        android:id="@+id/info"
        android:layout_width="222dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/loanncred_info"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_expense" />

    <Button
        android:id="@+id/next_button"
        style="@style/NextButton"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

</androidx.constraintlayout.widget.ConstraintLayout>