<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    package="com.budgy">

    <Button
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:text="@string/budget"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/Income" />

                    <TextView
                        android:id="@+id/income_percentage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:text="@string/income_pie"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/Fixed" />

                    <TextView
                        android:id="@+id/fixed_percentage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:text="@string/fixed_pie"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/LoanAndCredit" />

                    <TextView
                        android:id="@+id/loanncred_percentage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:text="@string/loanncred_pie"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/Variable" />

                    <TextView
                        android:id="@+id/variable_percentage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:text="@string/variable_pie"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/balance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/balance"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewGraph" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginTop="120dp"
        android:background="@color/purple"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewGraph" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/start_over_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/income_button">

            <ImageView
                android:id="@+id/start_over_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/restart" />
            <TextView
                android:id="@+id/start_over_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_over"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/income_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@+id/start_over_button"
            app:layout_constraintEnd_toStartOf="@+id/expenses_button">
            <ImageView
                android:id="@+id/income_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/profit" />
            <TextView
                android:id="@+id/income_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/expenses_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@+id/income_button"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/expense_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/spending" />
            <TextView
                android:id="@+id/expense_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>